ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Rebate Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>