ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/COOP_Amount__c.field-meta.xml
<CustomField>
    <fullName>COOP_Amount__c</fullName>
    <label>COOP Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>