ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/COOP_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>COOP_Amount_Formula__c</fullName>
    <description>NEW COMMENT: Changing this formula text field to formula number field to handle negative amounts.
OLD COMMENT: Solution to show Coop Dollars as a currency in an environment with Multi-currency enabled.</description>
    <formula>COOP_Amount__c</formula>
    <label>COOP Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>