ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Invoice_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Formula__c</fullName>
    <description>Changing this formula text field to formula number field to handle negative amounts</description>
    <formula>Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>