ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Invoice_Upload_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Upload_Date_UTC__c</fullName>
    <label>Invoice Upload Date UTC</label>
    <type>DateTime</type>
</CustomField>