ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Year__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>