ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Rebate_ID__c.field-meta.xml
<CustomField>
    <fullName>Rebate_ID__c</fullName>
    <label>Rebate Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>