ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Rebate_Status__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Status__c</fullName>
    <label>Rebate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>