ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Rebate_Status_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Status_Date_UTC__c</fullName>
    <label>Rebate Status Date UTC</label>
    <type>DateTime</type>
</CustomField>