ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Rebates_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Rebates_Amount_Formula__c</fullName>
    <formula>IF(Total_Rebates__c &gt;= 0,

&quot;$&quot; &amp;
IF(
   Total_Rebates__c &gt;= 1000000,
  TEXT(FLOOR(Total_Rebates__c / 1000000)) &amp; &quot;,&quot;,
  &quot;&quot;) &amp;
IF(
  Total_Rebates__c &gt;= 1000,
  RIGHT(TEXT(FLOOR(Total_Rebates__c / 1000)), 3) &amp; &quot;,&quot;,
  &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Total_Rebates__c )), 3) &amp; &quot;.&quot; &amp;
IF(
  MOD(Total_Rebates__c , 1) * 100 &lt; 10,
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Total_Rebates__c , 1), 2) * 100),
  TEXT(MIN(ROUND(MOD(Total_Rebates__c , 1), 2) * 100, 99))
),

&quot;$&quot; &amp;
IF(
  Total_Rebates__c &lt; -1000,
  RIGHT(TEXT(FLOOR(Total_Rebates__c / 1000)), 4) &amp; &quot;,&quot; &amp;
RIGHT(TEXT(FLOOR(Total_Rebates__c )), 3) &amp; &quot;.&quot; &amp;
IF(
  ABS(MOD(Total_Rebates__c , 1) * 100) &lt; 10,
  &quot;0&quot; &amp; TEXT(ABS(ROUND(MOD(Total_Rebates__c , 1), 2) * 100)),
  TEXT(ABS(MIN(ROUND(MOD(Total_Rebates__c , 1), 2) * 100, 99)))
),
  
IF(
  Total_Rebates__c &lt; 0,
  RIGHT(TEXT(FLOOR(Total_Rebates__c )), 4) &amp; &quot;.&quot; &amp;
IF(
  ABS(MOD(Total_Rebates__c , 1) * 100) &lt; 10,
  &quot;0&quot; &amp; TEXT(ABS(ROUND(MOD(Total_Rebates__c , 1), 2) * 100)),
  TEXT(ABS(MIN(ROUND(MOD(Total_Rebates__c , 1), 2) * 100, 99)))
), &quot;0&quot;))
)



/* &quot;$&quot; &amp;
IF( 
   Total_Rebates__c &gt;= 1000000, 
  TEXT(FLOOR(Total_Rebates__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Total_Rebates__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Total_Rebates__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Total_Rebates__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Total_Rebates__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Total_Rebates__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Total_Rebates__c  , 1), 2) * 100, 99)) 
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebates</label>
    <type>Text</type>
</CustomField>