ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Rebates_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Rebates_Number_Formula__c</fullName>
    <description>Solution to show Currency as Dollar sign ($) instead of CurrencyCode in an environment with Multi-currency enabled (visible to external users - ROOFPRO Contractors).</description>
    <formula>Total_Rebates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebates ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>