ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Redemption_Code__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Code__c</fullName>
    <label>Redemption Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>