ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Total_Actual_Squares__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Squares__c</fullName>
    <label>Total Actual Squares</label>
    <summarizedField>Invoice_Line__c.ActualSquares__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>