ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Total_Rebate_Squares__c.field-meta.xml
<CustomField>
    <fullName>Total_Rebate_Squares__c</fullName>
    <label>Rebate Squares</label>
    <summarizedField>Invoice_Line__c.RebateSquares__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.Is_Used_To_Calculate_Square__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>