ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Total_Rebates__c.field-meta.xml
<CustomField>
    <fullName>Total_Rebates__c</fullName>
    <label>Rebates</label>
    <summarizedField>Invoice_Line__c.Dollars__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>