ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/Uploaded_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded Invoice</label>
    <referenceTo>Contractor_Invoice__c</referenceTo>
    <relationshipLabel>Rebate Invoices</relationshipLabel>
    <relationshipName>Rebate_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>