ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/fields/X59_minutes_ago__c.field-meta.xml
<CustomField>
    <fullName>X59_minutes_ago__c</fullName>
    <defaultValue>(NOW() - 0.040)</defaultValue>
    <label>59 minutes ago</label>
    <type>DateTime</type>
</CustomField>