ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/listViews/All_Rebate_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Rebate_Invoices</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contractor__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Year__c</columns>
    <columns>Rebate_Status__c</columns>
    <columns>Uploaded_Invoice__c</columns>
    <columns>Redemption_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>IKOPRO_Loyalty_Admin</role>
    </sharedTo>
</ListView>