ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice__c/listViews/This_Year_External_FR.listView-meta.xml
<ListView>
    <fullName>This_Year_External_FR</fullName>
    <columns>NAME</columns>
    <columns>Rebates_Amount_Formula__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Distributor__c</columns>
    <columns>Rebate_Status__c</columns>
    <columns>Total_Rebate_Squares__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Factures de remise de cette année</label>
    <language>en_US</language>
    <sharedTo>
        <group>Partner_Community_Users</group>
    </sharedTo>
</ListView>